2011-09-23  Anders Carlsson  <andersca@apple.com>

        Add OVERRIDE to a bunch of virtual member functions on clients
        https://bugs.webkit.org/show_bug.cgi?id=68712

        Reviewed by Sam Weinig.

        * WebKit.xcodeproj/project.pbxproj:

2011-09-21  Dan Bernstein  <mitz@apple.com>

        WebKit part of: Prevent the WebKit frameworks from defining inappropriately-named Objective-C classes
        https://bugs.webkit.org/show_bug.cgi?id=68451

        Reviewed by Darin Adler.

        * WebKit.xcodeproj/project.pbxproj: Added a script build phase that invokes
        check-for-inappropriate-objc-class-names, allowing only class names prefixed with "Web" or "_Web".

2011-09-19  Anders Carlsson  <andersca@apple.com>

        Remove WebViewEventHandling.mm
        https://bugs.webkit.org/show_bug.cgi?id=68387

        Reviewed by Adam Roben.

        Remove WebViewEventHandling.mm from the Xcode project.

        * WebKit.xcodeproj/project.pbxproj:

2011-09-19  Dan Bernstein  <mitz@apple.com>

        WebKit part of [mac] WebKit contains Objective-C classes that are not prefixed with its standard prefixes
        https://bugs.webkit.org/show_bug.cgi?id=68323

        Reviewed by Sam Weinig.

        Updated for the renaming of NonBlockingPanel to WebNonBlockingPanel.

        * English.lproj/WebJavaScriptTextInputPanel.nib/classes.nib: Removed.
        * English.lproj/WebJavaScriptTextInputPanel.nib/designable.nib: Added.
        * English.lproj/WebJavaScriptTextInputPanel.nib/info.nib: Removed.
        * English.lproj/WebJavaScriptTextInputPanel.nib/keyedobjects.nib:

2011-09-16  Filip Pizlo  <fpizlo@apple.com>

        DFG JIT should inline Math.abs
        https://bugs.webkit.org/show_bug.cgi?id=68227

        Reviewed by Oliver Hunt.

        Added JavaScriptCore/dfg to include path path.

        * CMakeLists.txt:

2011-09-14  Anders Carlsson  <andersca@apple.com>

        Get rid of WebCoreViewFactory and its WebViewFactory subclass