@@ -1,5 +1,16 @@
 2011-09-23  Anders Carlsson  <andersca@apple.com>
 
+        Axe WebImageRendererFactory
+        https://bugs.webkit.org/show_bug.cgi?id=68715
+
+        Reviewed by Darin Adler.
+
+        Remove WebImageRendererFactory.m from the Xcode project.
+
+        * WebKit.xcodeproj/project.pbxproj:
+
+2011-09-23  Anders Carlsson  <andersca@apple.com>
+
         Add OVERRIDE to a bunch of virtual member functions on clients
         https://bugs.webkit.org/show_bug.cgi?id=68712
 
